--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -35,7 +35,7 @@ jobs:
         php_extensions: xdebug
         bootstrap: vendor/autoload.php
         configuration: phpunit.xml
-        args: ---coverage-clover clover.xml
+        args: --coverage-clover clover.xml
       env:
         XDEBUG_MODE: coverage
         TEST_NAME: Scarlett
