--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,21 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/events": "^8.0"
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.3"
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.0",
+        "nunomaduro/collision": "^5.10"
     },
     "autoload": {
         "psr-4": {
             "RaziAlsayyed\\LaravelCascadedSoftDeletes\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "RaziAlsayyed\\LaravelCascadedSoftDeletes\\Test\\": "tests/"
         }
     },
     "minimum-stability": "dev",
