--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,12 +34,12 @@ jobs:
       with:
         php_extensions: xdebug
         configuration: phpunit.xml
-        args: --coverage-clover clover.xml
+        # args: --coverage-clover clover.xml
       env:
         XDEBUG_MODE: coverage
         TEST_NAME: Scarlett
 
     - uses: codecov/codecov-action@v2
       with:
-        files: ./clover.xml
+        files: ./build/logs/clover.xml
         fail_ci_if_error: true
