--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-	"test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "RaziAlsayyed\\LaravelCascadedSoftDeletes\\Providers\\CascadedSoftDeletesProvider"
+            ]
+        }
     }
 }
