--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,8 @@
-// https://aka.ms/devcontainer.json
 {
 	"name": "laravel-cascaded-soft-deletes devcontainer image",
 	"build": { 
 		"dockerfile": "../Dockerfile",
-		"context": "..",
+		"context": ".."
 	},
 	"workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
 	"workspaceFolder": "/workspace",
@@ -15,8 +14,4 @@
 		"esbenp.prettier-vscode",
 		"junstyle.php-cs-fixer"
 	]
-	// "dockerComposeFile": [
-	// 	"../docker-compose.yml"
-	// ],
-	// "service": "php.test",
 }
