--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,15 +17,17 @@ jobs:
       fail-fast: true
       matrix:
         dependency_version: [prefer-stable]
-        test: [1, 2, 3, 4, 5, 6, 7]
+        test: [1, 2, 3, 4, 5, 6, 7, 8, 9]
         include:
           - { test: 1, php: ^7.3, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
-          - { test: 2, php: ^7.3, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
-          - { test: 3, php: ^7.4, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
-          - { test: 4, php: ^7.4, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
-          - { test: 5, php: ^8.0, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
+          - { test: 2, php: ^7.4, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
+          - { test: 3, php: ^8.0, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
+          - { test: 4, php: ^7.3, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
+          - { test: 5, php: ^7.4, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
           - { test: 6, php: ^8.0, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
-          - { test: 7, php: ^8.1, laravel: ^8.0, testbench: ^6.0, collision: ^5.0, phpunit: 9.5.10 }
+          - { test: 7, php: ^8.1, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
+          - { test: 8, php: ^8.0, laravel: ^9.0, testbench: ^7.0, collision: ^6.1, phpunit: 9.5.10 }
+          - { test: 9, php: ^8.1, laravel: ^9.0, testbench: ^7.0, collision: ^6.1, phpunit: 9.5.10 }
 
 
     steps:
@@ -81,7 +83,7 @@ jobs:
       #   TEST_NAME: Scarlett
 
     - uses: codecov/codecov-action@v2
-      if: matrix.php == '^8.1' && matrix.laravel == '^8.0'
+      if: matrix.php == '^8.1' && matrix.laravel == '^9.0'
       with:
         files: ./build/logs/clover.xml
         fail_ci_if_error: true
