--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0"
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0|^7.0",
@@ -36,7 +36,7 @@
 	"sniff": [
             "./vendor/bin/php-cs-fixer fix -vvv --dry-run --show-progress=dots"
         ],
-        "lint": [       
+        "lint": [
     	    "./vendor/bin/php-cs-fixer fix -vvv --show-progress=dots"
         ]
     },
