--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   tests:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: P ${{ matrix.php }} - L ${{ matrix.laravel }} - D ${{ matrix.dependency_version }}
 
     strategy:
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
       matrix:
         dependency_version: [prefer-stable]
-        test: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+        test: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
         include:
           - { test: 1, php: ^7.3, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
           - { test: 2, php: ^7.4, laravel: ^7.0, testbench: ^5.0, collision: ^4.3, phpunit: 9.3.3 }
@@ -28,7 +28,9 @@ jobs:
           - { test: 7, php: ^8.1, laravel: ^8.0, testbench: ^6.0, collision: ^5.10, phpunit: 9.5.10 }
           - { test: 8, php: ^8.0, laravel: ^9.0, testbench: ^7.0, collision: ^6.1, phpunit: 9.5.10 }
           - { test: 9, php: ^8.1, laravel: ^9.0, testbench: ^7.0, collision: ^6.1, phpunit: 9.5.10 }
-          - { test: 10, php: ^8.1, laravel: ^10.0, testbench: ^7.0, collision: ^6.1, phpunit: 9.5.10}
+          - { test: 10, php: ^8.1, laravel: ^10.0, testbench: ^8.0, collision: ^7.0, phpunit: 10.5.5}
+          - { test: 11, php: ^8.2, laravel: ^10.0, testbench: ^8.0, collision: ^7.0, phpunit: 10.5.5}
+          - { test: 12, php: ^8.3, laravel: ^10.0, testbench: ^8.0, collision: ^7.0, phpunit: 10.5.5}
 
 
     steps:
@@ -84,7 +86,7 @@ jobs:
       #   TEST_NAME: Scarlett
 
     - uses: codecov/codecov-action@v2
-      if: matrix.php == '^8.1' && matrix.laravel == '^10.0'
+      if: matrix.php == '^8.3' && matrix.laravel == '^10.0'
       with:
         files: ./build/logs/clover.xml
         fail_ci_if_error: true
