--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
         "phpunit/phpunit": "^8.5.10|^9.3.3",
         "nunomaduro/collision": "^4.3|^5.10|^6.1",
         "friendsofphp/php-cs-fixer": "^3.4"
