--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
-        "phpunit/phpunit": "^8.5.10|^9.3.3|^9.6",
-        "nunomaduro/collision": "^4.3|^5.10|^6.1|^7.0",
-        "friendsofphp/php-cs-fixer": "^3.4"
+        "orchestra/testbench": "^7.0|^8.0",
+        "phpunit/phpunit": "^9.3.3|^9.6",
+        "nunomaduro/collision": "^6.1|^7.0",
+        "laravel/pint": "^1.14"
     },
     "autoload": {
         "psr-4": {
@@ -33,9 +33,6 @@
     "prefer-stable": true,
     "scripts": {
         "test": "vendor/bin/phpunit",
-	"sniff": [
-            "./vendor/bin/php-cs-fixer fix -vvv --dry-run --show-progress=dots"
-        ],
         "lint": [
     	    "./vendor/bin/php-cs-fixer fix -vvv --show-progress=dots"
         ]
